<resources>
    <string name="app_name">Pinlinx</string>

    <string name="facebook_app_id">403634893783263</string>
    <string name="fb_login_protocol_scheme">fb403634893783263</string>

    <string name="forgot_password">Forgot Password ?</string>
    <string name="username">Username</string>
    <string name="loin">login</string>
    <string name="or_connect_with">Or Connect With</string>
    <string name="facebook">facebook</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">LOGIN</string>
    <string name="no_thanks_just_a_fan">No THANKS, JUST A FAN</string>
    <string name="this_information">This information will be Displayed as your Personal Data</string>
    <string name="success_is_where">Winners never quit and quitters never win. Complete your profile and keep track of your sporting.</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="bio">Bio</string>
    <string name="club">Club</string>
    <string name="coach">Coach</string>
    <string name="main_sport">Main Sport</string>
    <string name="i_m_an_athlete_with_disability">I\'m an Athlete with disability</string>
    <string name="fans">Fans</string>
    <string name="_555">555</string>
    <string name="demo_text">Android library used to create an awesome Android UI based on a draggable element similar to the last
        YouTube graphic component.</string>

    <string name="timeline">Timeline</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="comment1">you have send comment successfully</string>
    <string name="send">Send</string>

    <string name="empty_screen">Oops!! An unexpected error occurred</string>
    <string name="please_retry">Please retry after sometime</string>
    <string name="retry">Retry</string>

</resources>
