<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/success_is_where"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/main_sport"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtMainSport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="40dp"
                    android:text="@string/coach"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtCoach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="55dp"
                    android:text="@string/club"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bio"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/edtBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/career_fragment_imageview_backgrouond"
                android:gravity="top"
                android:lines="5"
                android:padding="16dp"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="back"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnContinueB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/personal_info_fragment_button2"
                    android:text="Continue"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>