<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/cover_image" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/pinlinx_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="15dp"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/checkBoxRemember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:buttonTint="@color/white"
                    android:text="Remember Me"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/loin"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cameradata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/grid_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_connect_with"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="normal" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />
                </LinearLayout>

                <Button
                    android:id="@+id/commentpage1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/fb_background"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/llRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/newpostdata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/white"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="REGISTER"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>